--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Blog Project</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Travels</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
 
-    <script src="js/app.js"></script>
-    <div> Test 3</div>
+    <div class="container">
+        <div class="destination-container">
+            <div class="destination" id="florida">
+                <h2>Florida</h2>
+            </div>
+
+            <div class="destination" id="paris">
+                <h2>Paris</h2>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
